-- 2013-01-27 --
* Added '.left' command to see how many words are left.
* Some minor text changes.

-- 2011-12-08 --
* Number of correctly answered words is now _properly_ displayed.
* Now at the start of a test tells which options (flags) the user have chosen.
* Fixed sillyness that the program would congratulate the user even if no words could be loaded.

-- 2011-11-23 --
* Now displays the number of correctly answered words after a test.

-- 2011-05-07 --
* Fixed stupid crash when input string is empty.

-- 2011-03-30 --
* Added functionality for re-testing the failed words.
* Updated README with information about the word files.

-- 2011-03-18 --
* Some changes to displayed text, including the usage and command information.
* Updated README.

Code refactoring:
* Now using format() instead of string concatenation in many places.
* Changed a couple of function names.
* Updated obsolete comments.

-- 2011-03-17--
* Program will assume that word file extension is '.txt' if nothing stated.
* If no word files are specified, the program will load all the files in the specified directory.
* No longer required to end directory name with '/'.
* Minor aesthetic fixes.

-- 2011-02-10 --
* It's now required to pass a "working directory" parameter.

-- 2010-11-07 --
* Now also accepts directories as a vocabulary source. If given a directory, vcheck will try to load all the containing files that end with '.txt'.

-- 2010-05-15 --
* Now prints a line containing the number of words and files on start up.
* Shows a number for every word.

-- 2010-05-07 --
* Fixed bug that occurred when guessing without having typed anything.

-- 2010-04-24 --
* Added support for multiple word files.